Fix overflow service configuration

--- a/src/pages/Marketplace/Marketplace.module.sass
+++ b/src/pages/Marketplace/Marketplace.module.sass
@@ -3,7 +3,7 @@
 
 .marketplace
     display: flex
-    height: 100vh
+    min-height: 100vh
     width: 100vw
     flex-direction: column
     align-items: center
@@ -15,6 +15,7 @@
     width: 50%
     align-items: center
     justify-content: center
+    padding: 40px 0
 
 .server
     width: 100%
